--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ header a {
   </p>
 
 <div class="image-container">
-  <img src="https://i.imgur.com/EUopA3E.png" alt="Man Utd first XI 2023/24"></div>
+  <img src="https://i.imgur.com/wLWm5ln.png" alt="Man Utd first XI 2023/24"></div>
 <br>
 
   <h2>Conclusion</h2>
