--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 <link rel="shortcut icon" type="image/x-icon" href="https://datamb.football/favicon.ico">
   <title translate="no">Rasmus Højlund, the missing piece of the puzzle | Raulgarciaa15 x DataMB</title>
-  <meta property="og:image" content="https://i.imgur.com/JuPQm8o.png">
+  <meta property="og:image" content="https://i.imgur.com/bP8az5l.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@DataMB_">
   <meta name="twitter:title" content="Rasmus Højlund, the missing piece of the puzzle | Raulgarciaa15 x DataMB">
   <meta name="twitter:description" content="">
-  <meta name="twitter:image" content="https://i.imgur.com/JuPQm8o.png">
+  <meta name="twitter:image" content="https://i.imgur.com/bP8az5l.png">
 
   <title>Rasmus Højlund, the missing piece of the puzzle | Raulgarciaa15 x DataMB</title>
 
